[project]
name = "piano-transcription-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.10.2.post1",
    "matplotlib>=3.9.2",
    "mido>=1.3.2",
    "resampy>=0.4.3",
    "torch>=2.4.1",
    "torchlibrosa>=0.1.0",
]
